--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,14 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer components {
+    .icon {
+        @apply hidden p-2 h-10 w-10 bg-gray-200 xl:inline-flex rounded-full text-gray-700 cursor-pointer hover:bg-gray-300;
+    }
 
-* {
-  box-sizing: border-box;
+    .inputIcon {
+        @apply flex items-center p-2 justify-center hover:bg-gray-100 space-x-1 flex-grow cursor-pointer rounded-xl;
+    }
+
 }
